Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-45144

Collections: key & fixed metadata overhead not included in collection disk size

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.0.0
    • Cheshire-Cat
    • couchbase-bucket
    • None
    • Untriaged
    • 1
    • No
    • KV-Engine 2021-March

    Description

      We only change the counter using couchstore “DocInfo::physical_size” which seems to be the value only so excludes key and our fixed metadata (cas/expiry etc..)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              owend Daniel Owen
              owend Daniel Owen
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty