MB-45144: Collection disk size use DocInfo::getTotalSize

For all items that contribute to disk size, use DocInfo::getTotalSize
which returns the key + value + meta sizes.

Change-Id: I0b8229252bcd2b2afb320261f5abdfd9fbb04027
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/150014
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>