engines/ep/src/couch-kvstore/couch-kvstore.cc
@@ -835,7 +835,7 @@ static int time_purge_hook(Db* d,
         if (!docKey.isInSystemCollection()) {
             auto itr = ctx->stats.collectionSizeUpdates.emplace(
                     docKey.getCollectionID(), 0);
-            itr.first->second += info->physical_size;
+            itr.first->second += info->getTotalSize();
         }
     };
 
@@ -853,7 +853,7 @@ static int time_purge_hook(Db* d,
         }
         if (metadata->isPrepare()) {
             ctx->stats.preparesPurged++;
-            ctx->stats.prepareBytesPurged += info->physical_size;
+            ctx->stats.prepareBytesPurged += info->getTotalSize();
 
             // Track nothing for the individual collection as the stats doc has
             // already been deleted.
@@ -913,7 +913,7 @@ static int time_purge_hook(Db* d,
         if (metadata->isPrepare()) {
             if (info->db_seq <= ctx->highCompletedSeqno) {
                 ctx->stats.preparesPurged++;
-                ctx->stats.prepareBytesPurged += info->physical_size;
+                ctx->stats.prepareBytesPurged += info->getTotalSize();
 
                 // Decrement individual collection disk sizes as we track
                 // prepares in the value. We don't do this at collection drop
@@ -1218,8 +1218,7 @@ static couchstore_error_t replayPreCopyHook(
             // doc was previously a prepare (not deleted).
             if (st == COUCHSTORE_SUCCESS && !di->deleted) {
                 --prepareStats.onDiskPrepares;
-                prepareStats.onDiskPrepareBytes -= di->physical_size;
-
+                prepareStats.onDiskPrepareBytes -= di->getTotalSize();
             }
         }
 
@@ -1230,17 +1229,17 @@ static couchstore_error_t replayPreCopyHook(
             // New prepare
             if (st == COUCHSTORE_ERROR_DOC_NOT_FOUND) {
                 ++prepareStats.onDiskPrepares;
-                prepareStats.onDiskPrepareBytes += docInfo->physical_size;
+                prepareStats.onDiskPrepareBytes += docInfo->getTotalSize();
             }
 
             if (st == COUCHSTORE_SUCCESS) {
                 if (di->deleted) {
                     // Abort -> Prepare
                     ++prepareStats.onDiskPrepares;
-                    prepareStats.onDiskPrepareBytes += docInfo->physical_size;
+                    prepareStats.onDiskPrepareBytes += docInfo->getTotalSize();
                 } else {
                     // Prepare -> Prepare
-                    auto delta = docInfo->physical_size - di->physical_size;
+                    auto delta = docInfo->getTotalSize() - di->getTotalSize();
                     prepareStats.onDiskPrepareBytes += delta;
                 }
             }
@@ -1256,17 +1255,17 @@ static couchstore_error_t replayPreCopyHook(
                                         docInfo->db_seq,
                                         isCommitted,
                                         isDeleted,
-                                        docInfo->physical_size,
+                                        docInfo->getTotalSize(),
                                         di->db_seq,
                                         oldIsDeleted,
-                                        di->physical_size);
+                                        di->getTotalSize());
 
         } else {
             collectionStats.updateStats(diskDocKey.getDocKey(),
                                         docInfo->db_seq,
                                         isCommitted,
                                         isDeleted,
-                                        docInfo->physical_size);
+                                        docInfo->getTotalSize());
         }
     }
     return COUCHSTORE_SUCCESS;
@@ -2869,10 +2868,10 @@ static void saveDocsCallback(const DocInfo* oldInfo,
                                                   newInfo->db_seq,
                                                   isCommitted,
                                                   isDeleted,
-                                                  newInfo->physical_size,
+                                                  newInfo->getTotalSize(),
                                                   oldInfo->db_seq,
                                                   oldIsDeleted,
-                                                  oldInfo->physical_size);
+                                                  oldInfo->getTotalSize());
 
         if (!oldInfo->deleted) {
             // Doc already existed alive on disk, this is an update
@@ -2883,7 +2882,7 @@ static void saveDocsCallback(const DocInfo* oldInfo,
                                                   newInfo->db_seq,
                                                   isCommitted,
                                                   isDeleted,
-                                                  newInfo->physical_size);
+                                                  newInfo->getTotalSize());
     }
 
     enum class DocMutationType { Insert, Update, Delete };
@@ -2904,8 +2903,8 @@ static void saveDocsCallback(const DocInfo* oldInfo,
         onDiskMutationType = DocMutationType::Insert;
     }
 
-    const ssize_t newSize = newInfo->physical_size;
-    const ssize_t oldSize = oldInfo ? oldInfo->physical_size : 0;
+    const ssize_t newSize = newInfo->getTotalSize();
+    const ssize_t oldSize = oldInfo ? oldInfo->getTotalSize() : 0;
 
     if (newKey.isPrepared()) {
         switch (onDiskMutationType) {
